modifying the file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar>
 <h1>Welcome to {{ title }}!</h1>
 <input value = "name"(input)="onNameChange($event)">
 <p>{{name}}</p>
 
 <app-first></app-first>
-<!-- <app-second ></app-second> -->
-<app-product-list></app-product-list>
+<app-second></app-second>
+<app-product-list></app-product-list> -->
 
-<app-reactive-form></app-reactive-form>
-
+<!-- <app-reactive-form ngSkipHydration></app-reactive-form> -->
+ <a routerLink="/first">First</a>
+<router-outlet></router-outlet>
 
 
