--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -12,6 +12,19 @@
 <br>   <br>
 
 <button >Create the Login</button>
+<br>
+<br>
+
+<button (click)="sendingTheData()" mat-raised-button color="secondary" > GetTheData</button>
+
+<button (click)="sendTheData()" mat-raised-button color="secondary">PostTheData</button>
+
+
+<button (click)="updateTheData()" mat-raised-button color="secondary" >updateTheData</button>
+
+
+
+
 
 
 
