--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -111,3 +111,17 @@
     </tr>
   </tbody>
 </table>
+
+<button (click)="onSend()">
+  Send
+</button>
+<button (click)="getingTheApiData()">
+  Get
+</button>
+
+
+<button (click)="sendTo()">
+  SendTheData
+</button>
+
+
