--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,5 @@
 .main-HTML-Body{
     background-color:white;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
